1.19.4 support + Wind charge fix